# BriefBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_bot.py
app/: config.py  logger.py
app/admin_bot/: admin_bot.py  web_app.py
app/admin_bot/web/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
app/admin_bot/web/app/: TelegramProvider.tsx  globals.css  layout.tsx  page.tsx
app/admin_bot/web/app/api/stats/: route.ts
app/admin_bot/web/lib/: auth.ts  supabase.ts
app/bot/: keyboards.py  main_bot.py  middlewares.py  states.py
app/bot/web/: .env.local.example  package-lock.json  package.json
app/bot/web/app/: TelegramProvider.tsx  globals.css  layout.tsx  page.tsx
app/bot/web/app/api/history/: route.ts
app/bot/web/app/api/settings/: route.ts
app/bot/web/lib/: auth.ts  supabase.ts
app/db/: history_repo.py  supabase_client.py  template_repo.py  user_repo.py
app/models/: brief.py  db.py
app/services/: ai_factory.py  analysis.py  cache.py  gc.py  gemini_agent.py  groq_agent.py  notification.py  openrouter_agent.py  orchestrator.py  pdf_generator.py  transcription.py
app/templates/: brief_template.html  default.json  design.json  development.json  marketing.json
app/worker/: celery_app.py  tasks.py
scripts/: migrate.py
tests/: test_analysis.py  test_cache.py  test_circuit_breaker.py  test_keyboards.py  test_markdown_pdf.py  test_migration.py  test_orchestrator.py  test_pdf_generator.py  test_repos.py  test_templates.py  test_v3.py
